# flake8-comments

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
flake8_comments/: __init__.py  _checker.py  _core.py  _stop_words.py
tests/: test_core.py
