[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flake8_comments"
dist-name = "flake8-comments"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/flake8-comments"
license = "MIT"
keywords = "flake8 flake8-plugin linter styleguide code quality"
requires = ["flake8"]
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta", "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov"]

[tool.flit.entrypoints."flake8.extension"]
CM00 = "flake8_comments:Checker"

[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
skip = "venvs/"
multi_line_output = 5
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = [
    "--cov=flake8_comments",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
